@@ -1,10 +1,12 @@
 package ru.malik.spring.SprinSecurity.security;
 
 import org.springframework.security.core.GrantedAuthority;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 import ru.malik.spring.SprinSecurity.models.Person;
 
 import java.util.Collection;
+import java.util.Collections;
 import java.util.List;
 
 
@@ -18,7 +20,7 @@ public class PersonDetails implements UserDetails {
 
     @Override
     public Collection<? extends GrantedAuthority> getAuthorities() {
-        return List.of();
+        return Collections.singletonList(new SimpleGrantedAuthority(person.getRole()));
     }
 
     @Override
